--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo_minimal.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/logo_minimal.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="FoodLens AI - Your personal AI food nutritionist. Scan ingredients and get instant health analysis." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://foodlens.ai/" />
+  <meta property="og:title" content="FoodLens AI" />
+  <meta property="og:description"
+    content="FoodLens AI - Your personal AI food nutritionist. Scan ingredients and get instant health analysis." />
+  <meta property="og:image" content="https://foodlens.ai/logo_minimal.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://foodlens.ai/" />
+  <meta property="twitter:title" content="FoodLens AI" />
+  <meta property="twitter:description"
+    content="FoodLens AI - Your personal AI food nutritionist. Scan ingredients and get instant health analysis." />
+  <meta property="twitter:image" content="https://foodlens.ai/logo_minimal.png" />
+
+  <title>FoodLens AI</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
