add pwa support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,9 @@
   <meta property="twitter:description"
     content="FoodLens AI - Your personal AI food nutritionist. Scan ingredients and get instant health analysis." />
   <meta property="twitter:image" content="https://foodlens.ai/logo_minimal.png" />
+  <link rel="manifest" href="/manifest.json" />
 
-  <title>FoodLens AI</title>
+  <title>FoodLens AI - Smart Food Analysis</title>
 </head>
 
 <body>
